[gd_scene load_steps=22 format=3 uid="uid://heowlo4h6fdn"]

[ext_resource type="Script" path="res://end_phone/script/end_phone.gd" id="1_4hsqm"]
[ext_resource type="Script" path="res://dialogue/data/dialog_data.gd" id="2_3xu23"]
[ext_resource type="Texture2D" uid="uid://bulqj4cqluj" path="res://resource/assets/dialogueIMG/Testa .png" id="3_k4sa5"]
[ext_resource type="PackedScene" uid="uid://bp55k82sv4ufj" path="res://interactable/interactable.tscn" id="3_wtfak"]
[ext_resource type="Script" path="res://requirement/scripts/requirement.gd" id="4_1uhme"]
[ext_resource type="FontFile" uid="uid://j1vfrfh8ab2q" path="res://resource/fonts/KGMidnightMemories.ttf" id="4_uvss2"]
[ext_resource type="Texture2D" uid="uid://dog3kq1wlyc0v" path="res://resource/assets/rooms/Guardiola/telefono-agganciato.png" id="5_ysvu1"]
[ext_resource type="Texture2D" uid="uid://bh76u364bare1" path="res://resource/assets/rooms/Guardiola/telefono-sganciato.png" id="6_hdvbe"]
[ext_resource type="AudioStream" uid="uid://b7j6upbs7mcik" path="res://audio/sfx/phone/Phone_Dial_01.wav" id="8_qsdsk"]
[ext_resource type="PackedScene" uid="uid://cxrfji6xsmwwg" path="res://highlight_component/highlight_component.tscn" id="10_lmlw3"]
[ext_resource type="Script" path="res://highlight_component/TelephoneHighlight.gd" id="11_cpiah"]
[ext_resource type="Shader" path="res://highlight_component/object_highlight.gdshader" id="12_wriuh"]

[sub_resource type="Resource" id="Resource_tt4s5"]
script = ExtResource("4_1uhme")
key = "end"
value = true

[sub_resource type="Resource" id="Resource_o4jv2"]
script = ExtResource("2_3xu23")
dialogue_text = Array[String](["911, whatâ€™s the emergency ? "])
character_image = ExtResource("3_k4sa5")
text_name = "Angelo"
triggers = Array[ExtResource("4_1uhme")]([SubResource("Resource_tt4s5")])

[sub_resource type="CircleShape2D" id="CircleShape2D_w6mib"]
radius = 129.124

[sub_resource type="RectangleShape2D" id="RectangleShape2D_434pq"]
size = Vector2(162, 163)

[sub_resource type="Animation" id="Animation_lta2m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_6yrt7"]
resource_name = "dial"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ynd1v"]
_data = {
"RESET": SubResource("Animation_lta2m"),
"dial": SubResource("Animation_6yrt7")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jj72j"]
shader = ExtResource("12_wriuh")
shader_parameter/maxLineWidth = 10.0
shader_parameter/minLineWidth = 1.0
shader_parameter/speed = 5.0
shader_parameter/blockSize = 5.0
shader_parameter/color = Color(1, 1, 1, 0)
shader_parameter/tolerance = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wm85l"]
radius = 128.004

[node name="EndPhone" type="Node2D"]
script = ExtResource("1_4hsqm")
dialog = Array[ExtResource("2_3xu23")]([SubResource("Resource_o4jv2")])

[node name="Agganciato" type="Sprite2D" parent="."]
position = Vector2(33, 2)
texture = ExtResource("5_ysvu1")

[node name="NonAgganciato" type="Sprite2D" parent="."]
visible = false
position = Vector2(33, -4)
texture = ExtResource("6_hdvbe")

[node name="Interactable" parent="." instance=ExtResource("3_wtfak")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_w6mib")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -63.0
offset_top = -190.0
offset_right = 80.0
offset_bottom = -155.0
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("4_uvss2")
theme_override_font_sizes/font_size = 30
text = "Call
"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 64
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1, -3.5)
shape = SubResource("RectangleShape2D_434pq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ynd1v")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_qsdsk")

[node name="HighlightComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("10_lmlw3")]
position = Vector2(50, 76)
script = ExtResource("11_cpiah")
sprite = NodePath("../Agganciato")
shader = SubResource("ShaderMaterial_jj72j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HighlightComponent"]
position = Vector2(-49, -77)
shape = SubResource("CircleShape2D_wm85l")

[connection signal="interacted" from="Interactable" to="." method="_on_interactable_interacted"]
[connection signal="player_enter" from="Interactable" to="." method="_on_interactable_player_enter"]
[connection signal="player_exit" from="Interactable" to="." method="_on_interactable_player_exit"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
